--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "framework": null,
   "functions":{
         "api/index.php": {
-        "runtime": "vercel-php@0.6.0"
+        "runtime": "vercel-php@0.7.0"
   } 
   },
  
@@ -13,8 +13,12 @@
       "dest": "/api/index.php"
     }
   ],
+    "build": {
+    "env": {
+      "PHP_VERSION": "8.2"
+    }
+  }
   "env": {
-    "PHP_VERSION": "8.2.0",
     "APP_ENV": "production",
     "APP_DEBUG": "true",
     "APP_URL": "https://CRM.app",
